# proxemic_layer

./: README.md
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: People.msg  Person.msg  Proxemic.msg
src/people_publisher/: CMakeLists.txt  README.md  package.xml
src/people_publisher/cfg/: people_publisher.cfg
src/people_publisher/launch/: people_dummy_publisher.launch
src/people_publisher/src/: people_publisher.cpp
src/people_publisher/yaml/: standard_people_dummy.yaml
src/proxemic_layer/: .gitignore  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
src/proxemic_layer/cfg/: proxemic.cfg
src/proxemic_layer/src/: proxemic_layer.cpp  proxemic_layer.h
